--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,10 @@
          version="3.1"
          metadata-complete="true">
     <display-name>Archetype Created Web Application</display-name>
+    <welcome-file-list>
+        <welcome-file>index1.html</welcome-file>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
     <!-- 配置springmvc的前端控制器 -->
     <servlet>
         <servlet-name>spring-dispatcher</servlet-name>
